// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParameterSelector matches snapshot with empty selection 1`] = `
<div
  class="relative w-full"
>
  <button
    class="w-full px-6 py-3 border border-gray-200 rounded-xl bg-white text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 text-left flex items-center justify-between shadow-lg hover:border-gray-300 transition-colors font-medium min-h-[56px]"
    type="button"
  >
    <div
      class="flex flex-wrap gap-2 items-center min-h-[24px]"
    >
      <span
        class="text-gray-500"
      >
        Select up to 2 parameters...
      </span>
    </div>
    <span
      class="flex items-center justify-center ml-3"
    >
      <svg
        class="w-6 h-6 text-gray-400 transition-transform "
        fill="none"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 9l-7 7-7-7"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ParameterSelector matches snapshot with one parameter selected 1`] = `
<div
  class="relative w-full"
>
  <button
    class="w-full px-6 py-3 border border-gray-200 rounded-xl bg-white text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 text-left flex items-center justify-between shadow-lg hover:border-gray-300 transition-colors font-medium min-h-[56px]"
    type="button"
  >
    <div
      class="flex flex-wrap gap-2 items-center min-h-[24px]"
    >
      <span
        class="inline-flex items-center px-3 py-1 rounded-full bg-blue-50 text-blue-700 font-medium text-sm shadow-sm border border-blue-200"
      >
        Temperature
        <button
          class="ml-2 text-blue-400 hover:text-blue-700 focus:outline-none"
          tabindex="-1"
          type="button"
        >
          <svg
            class="w-4 h-4"
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </span>
    </div>
    <span
      class="flex items-center justify-center ml-3"
    >
      <svg
        class="w-6 h-6 text-gray-400 transition-transform "
        fill="none"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 9l-7 7-7-7"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ParameterSelector matches snapshot with two parameters selected 1`] = `
<div
  class="relative w-full"
>
  <button
    class="w-full px-6 py-3 border border-gray-200 rounded-xl bg-white text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 text-left flex items-center justify-between shadow-lg hover:border-gray-300 transition-colors font-medium min-h-[56px]"
    type="button"
  >
    <div
      class="flex flex-wrap gap-2 items-center min-h-[24px]"
    >
      <span
        class="inline-flex items-center px-3 py-1 rounded-full bg-blue-50 text-blue-700 font-medium text-sm shadow-sm border border-blue-200"
      >
        Temperature
        <button
          class="ml-2 text-blue-400 hover:text-blue-700 focus:outline-none"
          tabindex="-1"
          type="button"
        >
          <svg
            class="w-4 h-4"
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </span>
      <span
        class="inline-flex items-center px-3 py-1 rounded-full bg-blue-50 text-blue-700 font-medium text-sm shadow-sm border border-blue-200"
      >
        Relative Humidity
        <button
          class="ml-2 text-blue-400 hover:text-blue-700 focus:outline-none"
          tabindex="-1"
          type="button"
        >
          <svg
            class="w-4 h-4"
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </span>
    </div>
    <span
      class="flex items-center justify-center ml-3"
    >
      <svg
        class="w-6 h-6 text-gray-400 transition-transform "
        fill="none"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 9l-7 7-7-7"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </span>
  </button>
</div>
`;
